2010-11-25  Raúl Mateos  <raulofpandora@gmail.com>
	
	* pandora_console_install: spaces to tabs. Small version correction.

2010-11-25  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: Version update.

	* pandora_console.spec: Version update.

2010-11-25  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_console.redhat.spec: erased unrequired dependecy
	"graphviz-php" and upset the version required for php.

2010-11-25  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: erase the problematic
	foreign key in trecon_task.
	
	Fixes: #3118273
	
	* godmode/servers/recon_script.php: when I readed source code for
	to check that when delete a recon_script delete recon task that use
	this. Cleaned source code style.

2010-11-23  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/fgraph.php: erased the deprecated function
	"grafico_modulo_sparseOLD" and deprecated function
	"grafico_modulo_sparse_mobile". And in the function added new
	parameter $show_title with default value true for to show or no
	the title. And when Pandora mobile for the graph now use the
	function "grafico_modulo_sparse".

2010-11-23  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/OpenLayers/OpenLayers.js: backport to previous
	version in SVN, the library has a dumb mistakes.

2010-11-23  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/gis_maps/render_view.php: cleaned source code style.
	
	* include/functions_ui.php: fixed in the function
	"print_page_header" the check if the option is a separator that it
	was true when the key was zero.
	
	Fixes: #3115621

2010-11-23  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/extension_uploader.php: add first version of extension
	to upload other extensions.

2010-11-22  Raúl Mateos  <raulofpandora@gmail.com>

	* gomode/agentes/module_manager.php: Closed HTML tags.

	* images/status_sets/default/agent_no_monitors*.png: Added forgotten files.
