@@ -1,3 +1,8 @@
+2010-11-26  Dario Rodriguez  <dario.rodriguez@artica.es>
+
+	* extensions/plugin_registration.php: Fixed a bug related with html
+	entities in plugin registration
+
 2010-11-25  Raúl Mateos  <raulofpandora@gmail.com>
 	
 	* pandora_console_install: spaces to tabs. Small version correction.
